<resources>
    <string name="app_name">My progress</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">Location settings</string>
    <string name="sport">Sport</string>
    <string name="start_jogging">Start jogging</string>
    <string name="finish_running">Finish running</string>
    <string name="start_running">Start running</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>
    <string name="next">Next</string>
    <string name="free_running">Free running</string>
    <string name="set_distance">Set Distance</string>
    <string name="growth">Growth:</string>
    <string name="waist">Waist:</string>
    <string name="neck">Neck:</string>
    <string name="thigh">Thighs:</string>
    <string name="show_result">Show Result</string>
    <string name="weight">Weight:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="weightBarbell">Weight</string>
    <string name="reps">Reps</string>
    <string name="set">Set</string>
    <string name="add_set">Add set</string>
    <string name="complete_exercise">Complete exercise</string>
    <string name="sex">Sex:</string>
    <string name="bar_weight">Bar weight</string>
    <string name="calculate">Calculate</string>
    <string name="incorrectData">The data isnt correct</string>
    <string name="search">Search</string>
    <string name="run">Run</string>
    <string name="strength_exercises">Strength exercises</string>
    <string name="calculator_bench_press">Calculator bench press</string>
    <string name="fat_calculator">Fat calculator</string>
    <string name="support">Support</string>
    <string name="language">Language</string>
    <string name="change_theme">Change theme</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="contact_support">If you find some mistakes in this application or you have ideas, which help to do this app better you can contact with me</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="set_1">Set 1</string>
    >
    <string-array name="array_exercises">
                <item> Deadlift </item>
                <item> Rod in slope </item>
                <item> Pull-ups </item>
                <item> Bench Pressing on a Horizontal Bench </item>
                <item> Bench Pressing on an Inclined Bench </item>
                <item> Pressing dumbbells on a horizontal bench </item>
                <item> Pressing dumbbells on an incline bench </item>
                <item> Push-ups </item>
                <item> Push-ups on uneven bars </item>
                <item> Pull-up (reverse grip) </item>
                <item> Raising the biceps of a rod standing </item>
                <item> Dumbbell Lifting Standing </item>
                <item> Dumbbell Lifting Seated Sitting </item>
                <item> "Hammers" </item>
                <item> Lifting on the barbell of the rod (back grip) </item>
                <item> Bench Pressing with Narrow Grip </item>
                <item> French bench </item>
                <item> Army sitting sitting </item>
                <item> Army standing stand </item>
                <item> Army Armory in Smith </item>
                <item> Dumbbell presses standing </item>
                <item> Dumbbell Seated Press </item>
                <item> Twists </item>
                <item> Lifting the legs in the vise </item>
                <item> Dumbbell Attacks </item>
                <item> Barrage attacks </item>
                <item> Squats with a bar </item>
                <item> Front squats </item>
                <item> Creeping attacks </item>
                <item> Press with your feet </item>
                <item> Hyperextension </item>
                <item> Traction of dumbbells on an incline bench </item>
                <item> Dumbbell pulling on a horizontal bench </item>
                <item> Calf Rises </item>
                <item> Boom jerk </item>
                <item> Boom thrust </item>
                <item> Pressing slowly down </item>
                <item> Press fast </item>
                <item> Lifting dumbbells in front of you </item>
                <item> Press with a pause </item>
    </string-array>
    <string-array name="typeOfWeight">
        <item>Kilo</item>
        <item>Pounds</item>
    </string-array>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_running">Running</string>
    <string name="reset_time">Reset time</string>
    <string name="turn_gps_internet">Turn on data transfer</string>
    <string name="settings">Settings</string>
    <string name="enter_the_distance">Enter the distance</string>
    <string name="gettingDistance">getDistance</string>
    <string name="bigger_number_zero">Enter bigger number then 0</string>
    <string name="results">Results</string>
    <string name="number_set">Set </string>
    <string name="number_reps">Enter number of reps less 29</string>
    <string name="finish_running_notify">Finish running</string>
    <string name="your_result">Your result</string>
    <string name="ticker">You did it!</string>
    <string name="link_support">https://vk.com/andr_1999</string>
    <string name="contact_with_support">Contact with support</string>
    <string name="yes">Yes</string>
    <string name="reset_time_snack">Reset time</string>
    <string name="arent_exercises">There aren\'t exercises</string>
</resources>
