<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_run"
            android:icon="@drawable/ic_action_run"
            android:title="@string/run"/>
        <item
            android:id="@+id/nav_strength_exercises"
            android:icon="@drawable/ic_action_sport"
            android:title="@string/strength_exercises" />
        <item
            android:id="@+id/nav_fat_calculator"
            android:icon="@drawable/ic_action_calcul_fat"
            android:title="@string/fat_calculator" />
        <item
            android:id="@+id/nav_press"
            android:icon="@drawable/ic_action_press"
            android:title="@string/calculator_bench_press" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="Settings" />
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        </menu>
    </item>

</menu>

