<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:id="@+id/layoutRunning"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.user.myprogress.RunningActivity"
    tools:showIn="@layout/activity_running">

    <LinearLayout
        android:id="@+id/linearTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/time"
            android:textSize="34sp" />

        <Chronometer
            android:id="@+id/chronometerForRun"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="40"
            android:textSize="34sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearDistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearTime">

        <TextView
            android:id="@+id/textViewDistanceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/distance"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textViewDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="10000 m"
            android:textSize="34sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonStartFinishRunning"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey300"
        android:text="@string/start_running"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearDistance"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonResetTime"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey300"
        android:text="@string/reset_time"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartFinishRunning" />

</android.support.constraint.ConstraintLayout>
