<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="8dp"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/layoutSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutLanguage">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_action_location" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"

            android:text="@string/support"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutSupport"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changingTheme">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_action_language" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/language"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/changingTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutLanguage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_action_theme" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/change_theme"
            android:textSize="20sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>